--- a/imap_processing/cdf/config/imap_glows_global_cdf_attrs.yaml
+++ b/imap_processing/cdf/config/imap_glows_global_cdf_attrs.yaml
@@ -11,7 +11,7 @@ instrument_base: &instrument_base
     (CBK PAN). See https://imap.princeton.edu/instruments/glows for more details.
   Instrument_type: Particles (space)
 
-imap_glows_lA_hist:
+imap_glows_l1a_hist:
   <<: *instrument_base
   Data_level: L1A
   Data_type: L1A_hist>Level-1A histogram
