--- a/imap_processing/cdf/config/imap_glows_l1a_variable_attrs.yaml
+++ b/imap_processing/cdf/config/imap_glows_l1a_variable_attrs.yaml
@@ -1,11 +1,29 @@
 # Info found in cdf.defaults.py
+# Info defined from glows_cdf_attrs
 int_fillval: &int_fillval -9223372036854775808
 min_epoch: &min_epoch -315575942816000000
 max_epoch: &max_epoch 3155630469184000000
 
-# glows_l1a.py -> line 234.
+#Information taken from CDF warnings of missing attributes
+default_attrs: &default_attrs
+  # Resolution is optional?
+  RESOLUTION: ' '
+  DISPLAY_TYPE: no_plot
+  TIME_BASE: J2000
+  # Guess from other l1a sections, but optional?
+  TIME_SCALE: Terrestrial Time
+  # Guess from other l1a sections
+  REFERENCE_POSITION: Rotating Earth Geoid
+  # Guess from other l1a sections
+  UNITS: ns
+  FILLVAL: *int_fillval
+  VALIDMIN: *min_epoch
+  CATDESC: ' '
+  FIELDNAM: ' '
+
 # Information found in cdf.config.global_attrs.py EPOCH, and cdf.defaults.py
 epoch:
+  <<:  *default_attrs
   CATDESC: Time, number of nanoseconds since J2000 with leap seconds included
   FIELDNAM: epoch
   FILLVAL: *int_fillval # GlobalConstants.INT_FILLVAL,
@@ -21,38 +39,51 @@ epoch:
   TIME_SCALE: Terrestrial Time
   REFERENCE_POSITION: Rotating Earth Geoid
 
-# Putting glows.l1a.glows_l1a_data.py into .yaml format
+# Information from glows_cdf_attrs.py
 bins_attrs:
+  <<:  *default_attrs
   VALIDMMIN: 0
   VALIDMAX: 70
   CATDESC: Counts of direct events for photon impacts
   FIELDNAM: Counts of direct events
-  FORMAT: F2.4
+  # FORMAT is different from glows_cdf_attrs.py
+  # Changed this in order to avoid warnings
+  # Int with 10 digits
+  FORMAT: I10
   VAR_TYPE: support_data
   DISPLAY_TYPE: time_series
   LABLAXIS: Counts
 
 per_second_attrs:
+  <<:  *default_attrs
   VALIDMMIN: 0
   VALIDMAX: 300
   CATDESC: Direct events recorded approximately per second
   FIELDNAM: List of direct events
-  FORMAT: F2.4
+  # FORMAT is different from glows_cdf_attrs.py
+  # Changed this in order to avoid warnings
+  # Int with 10 digits
+  FORMAT: I10
   VAR_TYPE: support_data
   DISPLAY_TYPE: time_series
   LABLAXIS: Counts
 
 event_attrs:
+  <<:  *default_attrs
   VALIDMMIN: 0
   VALIDMAX: 300
   CATDESC: Direct events recorded approximately per second
   FIELDNAM: List of direct events
-  FORMAT: F2.4
+  # FORMAT is different from glows_cdf_attrs.py
+  # Changed this in order to avoid warnings
+  # Int with 10 digits
+  FORMAT: I10
   VAR_TYPE: data
   DISPLAY_TYPE: time_series
   LABLAXIS: Counts
 
 direct_event_attrs:
+  <<:  *default_attrs
   DEPEND_O: epoch
   DEPEND_1: per_second
   DEPEND_2: direct_event
@@ -60,34 +91,43 @@ direct_event_attrs:
   VALIDMAX: 300
   CATDESC: Direct events recorded approximately per second
   FIELDNAM: List of direct events, binned per second
-  FORMAT: F2.4
+  # FORMAT is different from glows_cdf_attrs.py
+  # Changed this in order to avoid warnings
+  # Int with 10 digits
+  FORMAT: I10
   VAR_TYPE: data
   DISPLAY_TYPE: time_series
   LABLAXIS: Counts
 
 histogram_attrs:
+  <<:  *default_attrs
   VALIDMIN: 0
   VALIDMAX: 70
   CATDESC: Histogram of photon counts
   DEPEND_0: epoch
   DEPEND_1: bins
   FIELDNAM: Histogram of photon counts
-  FORMAT: F2.4
+  # FORMAT is different from glows_cdf_attrs.py
+  # Changed this in order to avoid warnings
+  # Float with 4 digits
+  FORMAT: F0.5
   DISPLAY_TYPE: time_series
   LABLAXIS: Counts
-  FILL_VAL: GlobalConstants.INT_FILLVAL
+  FILL_VAL: *int_fillval
   UNITS: counts
   VAR_TYPE: data
 
 metadata_attrs: &metadata_attrs
+  <<:  *default_attrs
   DEPEND_0: epoch
   VALIDMIN: 0
   VALIDMAX: 1000000000
   DISPLAY_TYPE: time_series
-  FILL_VAL: GlobalConstants.INT_FILLVAL
+  FILL_VAL: *int_fillval
   VAR_TYPE: metadata
   FORMAT: I10
   LABLAXIS: Metadata
+  RESOLUTION: ' '
 
 # not-in--dicts in generate_de_dataset
 # Should I be defining the metadata_attrs here?
@@ -110,21 +150,37 @@ imap_start_time:
   <<: *metadata_attrs
   CATDESC: Start time of the block, in seconds, in IMAP spacecraft clock time
   FIELDNAM: Start time in seconds in IMAP time
+  # FORMAT is different from glows_cdf_attrs.py
+  # Changed this in order to avoid warnings
+  # Can range from F0 to F0.9
+  FORMAT: F0
 
 imap_time_offset:
   <<: *metadata_attrs
   CATDESC: End time of the block, in seconds, in IMAP spacecraft clock time
   FIELDNAM: End time in seconds in IMAP time
+  # FORMAT is different from glows_cdf_attrs.py
+  # Changed this in order to avoid warnings
+  # Can range from F0 to F0.9
+  FORMAT: F0.9
 
 glows_start_time:
   <<: *metadata_attrs
   CATDESC: Start time of the block, in seconds, in GLOWS clock time
   FIELDNAM: Start time in seconds in GLOWS time
+  # FORMAT is different from glows_cdf_attrs.py
+  # Changed this in order to avoid warnings
+  # Can range from F0 to F0.9
+  FORMAT: F0.5
 
 glows_time_offset:
   <<: *metadata_attrs
   CATDESC: End time of the block, in seconds, in GLOWS clock time
   FIELDNAM: End time in seconds in GLOWS time
+  # FORMAT is different from glows_cdf_attrs.py
+  # Changed this in order to avoid warnings
+  # Can range from F0 to F0.9
+  FORMAT: F0.5
 
 flags_set_onboard:
   <<: *metadata_attrs
@@ -147,6 +203,7 @@ number_of_spins_per_histogram:
   FIELDNAM: Number of histogram bins
 
 number_of_bins_per_histogram:
+  <<: *metadata_attrs
   CATDESC: Number of histogram bins
   FIELDNAM: Number of histogram bins
 
