--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,9 +51,10 @@ pytest-cov = {version="^4.0.0", optional=true}
 ruff = {version="==0.2.1", optional=true}
 sphinx = {version="*", optional=true}
 sphinxcontrib-openapi = {version="^0.8.3", optional=true}
+mypy = {version="^1.10.1", optional=true}
 
 [tool.poetry.extras]
-dev = ["pre-commit", "ruff"]
+dev = ["pre-commit", "ruff", "mypy"]
 doc = ["numpydoc", "pydata-sphinx-theme", "sphinx", "sphinxcontrib-openapi"]
 test = ["pytest", "pytest-cov"]
 tools= ["openpyxl", "pandas"]
@@ -119,4 +120,5 @@ exclude = ['__init__' ] # don't report on objects that match any of these regex
 
 [tool.mypy]
 follow_imports = 'skip'
+ignore_missing_imports = 'true'
 exclude = ["tests", "docs"]
