--- a/imap_processing/cdf/config/imap_idex_l1_variable_attrs.yaml
+++ b/imap_processing/cdf/config/imap_idex_l1_variable_attrs.yaml
@@ -8,12 +8,11 @@ data_max: &data_max 4096
 sample_rate_min: &sample_rate_min -130
 sample_rate_max: &sample_rate_max 130
 
-int_maxval: &int_maxval 9223372036854775807 # np.iinfo(np.int64).max
+int_maxval: &int_maxval 9223372036854775807
 
-# l1_data_base
-l1_data_base: &l1_data_base # ScienceAttrs
-  VALIDMIN: *min_epoch
-  VALIDMAX: *max_epoch
+l1_data_base: &l1_data_base
+  VALIDMIN: *data_min
+  VALIDMAX: *data_max
   DISPLAY_TYPE: spectrogram
   DEPEND_0: epoch
   FORMAT: ""
@@ -37,12 +36,12 @@ epoch:
   <<:  *l1_data_base
   CATDESC: Time, number of nanoseconds since J2000 with leap seconds included
   FIELDNAM: epoch
-  FILLVAL: *int_fillval # GlobalConstants.INT_FILLVAL,
+  FILLVAL: *int_fillval
   LABLAXIS: epoch
   FORMAT: ""  # Supposedly not required, fails in xarray_to_cdf
   UNITS: ns
-  VALIDMIN: *min_epoch # GlobalConstants.MIN_EPOCH
-  VALIDMAX: *max_epoch # GlobalConstants.MAX_EPOCH
+  VALIDMIN: *min_epoch
+  VALIDMAX: *max_epoch
   VAR_TYPE: support_data
   SCALETYP: linear
   MONOTON: INCREASE
@@ -50,11 +49,11 @@ epoch:
   TIME_SCALE: Terrestrial Time
   REFERENCE_POSITION: Rotating Earth Geoid
 
-sample_rate_base: &sample_rate_base # FloatAttrs
+sample_rate_base: &sample_rate_base
   DISPLAY_TYPE: no_plot
   CATDESC: ""
   FIELDNAM: ""
-  FILLVAL: -1.0e+31 # DOUBLE FILL VAL
+  FILLVAL: -1.0e+31
   VALIDMIN: *sample_rate_min
   VALIDMAX: *sample_rate_max
   DEPEND_0: epoch
@@ -66,7 +65,7 @@ sample_rate_base: &sample_rate_base # FloatAttrs
               0 is the start of data collection, negative
               numbers represent data collected prior to a dust event
 
-trigger_base: &trigger_base # ScienceAttrs
+trigger_base: &trigger_base
   VALIDMIN: 0
   VALIDMAX: *int_maxval
   DISPLAY_0: epoch
@@ -85,23 +84,35 @@ low_sr_attrs:
   CATDESC: Low sample rate time steps for a dust event.
   FIELDNAM: Low Sample Rate Time
   FILLVAL: *int_fillval
+  VAR_NOTES: The low sample rate in microseconds. Steps are approximately 1/4.025
+             microseconds in duration. Used by the Ion_Grid, Target_Low, and
+             Target_High variables.
 
 high_sr_attrs:
   <<:  *sample_rate_base
   CATDESC: High sample rate time steps for a dust event.
   FIELDNAM: High Sample Rate Time
+  VAR_NOTES: The high sample rate in microseconds. Steps are approximately 1/260
+    microseconds in duration. Used by the TOF_High, TOF_Mid, and
+    TOF_Low variables.
 
 tof_high_attrs:
   <<: *l1_tof_base
   CATDESC: Time of flight waveform on the high-gain channel
   FIELDNAM: High Gain Time of Flight
   LABLAXIS: TOF High Ampl.
+  VAR_NOTES: High gain channel of the time-of-flight signal.
+        Sampled at 260 Megasamples per second, with a 10-bit resolution.
+        Data is used to quantify dust composition.
 
 tof_mid_attrs:
   <<: *l1_tof_base
   CATDESC: Time of flight waveform on the mid-gain channel
   FIELDNAM: Mid Gain Time of Flight
   LABLAXIS: TOF Mid Ampl.
+  VAR_NOTES: Mid gain channel of the time-of-flight signal.
+        Sampled at 260 Megasamples per second, with a 10-bit resolution.
+        Data is used to quantify dust composition.
 
 tof_low_attrs:
   <<: *l1_tof_base
@@ -109,6 +120,9 @@ tof_low_attrs:
   CATDESC: Time of flight waveform on the low-gain channel
   FIELDNAM: Low Gain Time of Flight
   LABLAXIS: TOF Low Ampl.
+  VAR_NOTES: Low gain channel of the time-of-flight signal.
+        Sampled at 260 Megasamples per second, with a 10-bit resolution.
+        Data is used to quantify dust composition.
 
 
 target_low_attrs:
@@ -116,18 +130,27 @@ target_low_attrs:
   CATDESC: Target low charge sensitive amplifier waveform
   FIELDNAM: Low Target Signal
   LABLAXIS: Low Target Ampl.
+  VAR_NOTES: Low gain channel of IDEX's target signal.
+        Sampled at 3.75 Msps with 12-bit resolution.
+        Data is used to quantify dust charge.
 
 target_high_attrs:
   <<: *l1_target_base
   CATDESC: Ion grid charge sensitive amplifier waveform
   FIELDNAM: High Target Signal
   LABLAXIS: High Target Ampl.
+  VAR_NOTES: High gain channel of IDEX's target signal.
+        Sampled at 3.75 Msps with 12-bit resolution.
+        Data is used to quantify dust charge.
 
 ion_grid_attrs:
   <<: *l1_target_base
   CATDESC: Ion grid charge sensitive amplifier waveform data
   FIELDNAM: Ion Grid Signal
   LABLAXIS: Ion Grid Ampl.
+  VAR_NOTES: This is the ion grid signal from IDEX.
+        Sampled at 3.75 Msps with 12-bit resolution.
+        Data is used to quantify dust charge.
 
 # Trigger Stuff
 
