fix for lo, hi, swapi, mag

--- a/imap_processing/cdf/config/imap_mag_l1_variable_attrs.yaml
+++ b/imap_processing/cdf/config/imap_mag_l1_variable_attrs.yaml
@@ -55,6 +55,7 @@ vector_attrs:
 mag_support_attrs: &support_default
     <<: *default
     VAR_TYPE: support_data
+    UNITS: " "
 
 mag_metadata_attrs: &metadata_default
     <<: *default
