--- a/pyproject.toml
+++ b/pyproject.toml
@@ -118,10 +118,13 @@ checks = ["all", #report on all checks, except the following
 exclude = ['__init__' ] # don't report on objects that match any of these regex
 
 [tool.mypy]
-disable_error_code = ['type-arg', 'import-untyped', 'import-not-found', 'no-untyped-call']
+disable_error_code = ['import-not-found', # Unable to locate module or package specified
+                'import-untyped', # The import lacks type information
+                'no-untyped-call', # Function calls are only made to functions that are fully typed
+                'type-arg' ] # Requires type arguments to be specified in list[] and dict[]
 strict = true
 explicit_package_bases = true
 follow_imports = 'skip'
-exclude = ["tests", "docs"]
-mypy_path = ["imap_processing/" , "tools/"]
+exclude = ["tests"]
+packages = ["imap_processing" , "tools"]
 
