--- a/pyproject.toml
+++ b/pyproject.toml
@@ -125,7 +125,7 @@ disable_error_code = ['import-not-found', # Unable to locate module or package s
 strict = true
 explicit_package_bases = true
 follow_imports = 'skip' #may want to remove
-exclude = ["tests", "cdf_attrs"]
+exclude = ["tests"]
 packages = ["imap_processing" , "tools"]
 plugins = 'numpy.typing.mypy_plugin'
 
