--- a/imap_processing/cdf/config/imap_swapi_variable_attrs.yaml
+++ b/imap_processing/cdf/config/imap_swapi_variable_attrs.yaml
@@ -11,11 +11,29 @@ energy:
   VALIDMIN: 0
   VAR_TYPE: support_data
 
+flags:
+  CATDESC: Data quality flags
+  FIELDNAM: Quality Flags
+  FILLVAL: -9223370000000000000
+  FORMAT: I2
+  LABLAXIS: Flags
+  SCALE_TYP: linear
+  UNITS: " "
+  VALIDMAX: 1
+  VALIDMIN: 0
+  VAR_TYPE: support_data
+
 # <=== LABL_PTR_i Attributes ===>
 energy_label:
   CATDESC: Energy step id in lookup table
   FIELDNAM: Energy Step
   FORMAT: A2
+  VAR_TYPE: metadata
+
+flags_label:
+  CATDESC: Data quality flags
+  FIELDNAM: Quality Flags
+  FORMAT: A20
   VAR_TYPE: metadata
 
 # <=== Data Variables ===>
@@ -32,11 +50,16 @@ counts_default: &counts_default
   VAR_TYPE: data
   SCALETYP: linear
 
-compression_default: &compression_default
+flags_default:
+  CATDESC: Data quality flags.
+  FIELDNAM: Quality Flag
+  LABLAXIS: Flags
   DEPEND_0: epoch
-  DEPEND_1: energy
+  DEPEND_1: flags
+  DEPEND_2: energy
   DISPLAY_TYPE: spectrogram
-  LABL_PTR_1: energy_label
+  LABL_PTR_1: flags_label
+  LABL_PTR_2: energy_label
   FILLVAL: 4294967295
   FORMAT: I1
   UNITS: ' '
@@ -44,6 +67,9 @@ compression_default: &compression_default
   VALIDMAX: 1
   VAR_TYPE: data
   SCALETYP: linear
+  VAR_NOTES: >
+    There are 13 flags in total, first three flags are from science packets
+    and remaining 10 flags are from housekeeping packets.
 
 uncertainty_default: &uncertainty_default
   DEPEND_0: epoch
@@ -88,24 +114,6 @@ coin_counts:
   CATDESC: Coincidence Counts
   FIELDNAM: Coincidence CEM Counts
   LABLAXIS: coin_cnts
-
-pcem_flags:
-  <<: *compression_default
-  CATDESC: Primary Channel Electron Multiplier (CEM) compression flag
-  FIELDNAM: Primary CEM Flag
-  LABLAXIS: pcem_flag
-
-scem_flags:
-  <<: *compression_default
-  CATDESC: Secondary Channel Electron Multiplier (CEM) compression flag
-  FIELDNAM: Secondary CEM Flag
-  LABLAXIS: scem_flag
-
-coin_flags:
-  <<: *compression_default
-  CATDESC: Coincidence compression flag
-  FIELDNAM: Coincidence Flag
-  LABLAXIS: coin_flag
 
 pcem_uncertainty:
   <<: *uncertainty_default
