Depend_1 attr change

--- a/imap_processing/cdf/config/imap_glows_l1a_variable_attrs.yaml
+++ b/imap_processing/cdf/config/imap_glows_l1a_variable_attrs.yaml
@@ -64,7 +64,7 @@ direct_event_components_attrs:
 direct_events:
   <<:  *default_attrs
   DEPEND_O: epoch
-  DEPEND_1: per_second
+  DEPEND_1: within_the_second
   DEPEND_2: direct_event_components
   VALIDMIN: 0
   VALIDMAX: *max_uint32
