--- a/imap_processing/cdf/config/imap_codice_l1a_variable_attrs.yaml
+++ b/imap_processing/cdf/config/imap_codice_l1a_variable_attrs.yaml
@@ -1,3 +1,7 @@
+# TODO: Some currently blank attributes may be removed once
+# cdf_attribute_manager.py is updated to only check required attributes.
+# See comment here:
+# https://github.com/IMAP-Science-Operations-Center/imap_processing/pull/711#discussion_r1690212527
 # <=== Defaults ===>
 default_attrs: &default
     CATDESC: ""
